# kotlin_compiler

./: .gitignore  CMakeLists.txt  grammar.y  lexer.l  main.cpp  parser.y  tests.bat
src/JavaRTL/: Boolean.java  Char.java  Double.java  Float.java  InputOutput.java  Int.java  String.java  Unit.java
src/generation/: BytecodeGenerator.cpp  BytecodeGenerator.h  ClassGeneration.cpp  ClassGeneration.h  KotlinCodeGenerator.cpp  KotlinCodeGenerator.h
src/lexer/: ClassProcessor.cpp  ClassProcessor.h  TopLevelDeclarationProcessor.cpp  TopLevelDeclarationProcessor.h
src/nodes/: ExprListNode.cpp  ExprListNode.h  ExprNode.cpp  ExprNode.h  Node.cpp  Node.h  StmtListNode.cpp  StmtListNode.h  StmtNode.cpp  StmtNode.h  TypeNode.h  VarDeclaration.cpp  VarDeclaration.h  VarDeclarationList.cpp  node.cpp  node.h  types.cpp  types.h
src/nodes/class/: ClassBodyNode.cpp  ClassBodyNode.h  ClassNode.cpp  ClassNode.h  Inheritance.cpp  Inheritance.h
src/nodes/class/members/: ClassBodyNode.cpp  ClassBodyNode.h  Constructor.cpp  Constructor.h  ConstructorArgs.cpp  ConstructorArgs.h
src/nodes/class/members/enumEntry/: EnumEntry.cpp  EnumEntry.h  EnumEntryList.cpp  EnumEntryList.h
src/nodes/expr/: ExprListNode.cpp  ExprListNode.h  ExprNode.cpp  ExprNode.h
src/nodes/fun/: FunNode.cpp  FunNode.h
src/nodes/modifier/: ModifierMap.cpp  ModifierMap.h
src/nodes/stmt/: StmtListNode.cpp  StmtListNode.h  StmtNode.cpp  StmtNode.h
src/nodes/topLevel/: KotlinElementList.cpp  KotlinElementList.h  KotlinFileNode.cpp  KotlinFileNode.h
src/nodes/type/: TypeNode.cpp  TypeNode.h
src/nodes/varDeclaration/: VarDeclaration.cpp  VarDeclaration.h  VarDeclarationList.cpp  VarDeclarationList.h
src/semantic/error/: SemanticError.cpp  SemanticError.h  SemanticErrorCode.h
src/semantic/tables/: ClassTable.cpp  ClassTable.h  ClassTableElement.cpp  ClassTableElement.h
src/semantic/tables/class/: ClassTable.cpp  ClassTable.h  ClassTableElement.cpp  ClassTableElement.h
src/semantic/tables/class/Field/: FieldTable.h
src/semantic/tables/constant/: ConstantTable.cpp  ConstantTable.h  ConstantTableElement.cpp  ConstantTableElement.h
src/semantic/tables/field/: FieldTable.cpp  FieldTable.h  FieldTableElement.cpp  FieldTableElement.h
src/semantic/tables/method/: MethodTable.cpp  MethodTable.h  MethodTableElement.cpp  MethodTableElement.h
src/semantic/tables/params/: FuncParam.cpp  FuncParam.h
src/semantic/tables/type/: SemanticType.cpp  SemanticType.h
src/semantic/tables/variables/: FuncParam.h  LocalVariableTable.cpp  LocalVariableTable.h  LocalVariableTableElement.cpp  LocalVariableTableElement.h  NodeDescription.h  TypeNodeType.h  TypeTable.cpp  TypeTable.h
src/semantic/transformations/attributing/baseTypes/: BaseTypesAttributing.cpp  BaseTypesAttributing.h
src/semantic/transformations/attributing/javaRTLTypesTransformator/: JavaRTLTypesTransformator.cpp  JavaRTLTypesTransformator.h
src/semantic/transformations/baseTransformer/: ASTTransformer.cpp  ASTTransformer.h
src/semantic/transformations/literals/: LiteralsTransformator.cpp  LiteralsTransformator.h
src/semantic/transformations/modifiers/: ModifiersTransformator.cpp  ModifiersTransformator.h
src/semantic/transformations/operators/: OperatorsTransformator.cpp  OperatorsTransformator.h
src/semantic/trasformations/literals/: LiteralsTransformator.cpp  LiteralsTransformator.h
src/utils/math/: math.cpp
src/utils/output/: constTableToCsv.cpp  dot.cpp  tablesToCsv.cpp
test/: test001.txt  test002.txt  test003.txt  test004.txt  test005.txt  test006.txt  test007.txt  test008.txt  test009.txt  test010.txt  test011.txt  test012.txt
